syntax = "proto3";

option java_multiple_files = true;
package com.cloudbeds.demo.generated.grpc;

message Address {
  int32 addressId= 1;
  string addressLine1 = 2;
  string addressLine2 = 3;
  string city = 4;
  string state = 5;
  string country = 6;
}

message AddressList {
  repeated Address address = 1;
}

message GetUserRequest {
  int32 userId = 1;
}

message GetUserResponse {
  optional int32 userId = 1;
  string lastName = 2;
  string firstName = 3;
  string email = 4;
  AddressList addresses = 5;
}

message ErrorResponse {
  int32 userId = 1;
}

service UserService {
  rpc retrieveUser(GetUserRequest) returns (GetUserResponse);
}